# datengartln

./: README.md  main.html  main.ipynb  main.qmd  pyproject.toml
data/: awm_container.geojson  districts.geojson  districts_population.csv  kaminkehrer.geojson  markets.geojson  neighbourhoods.geojson  wc_finder_opendata.geojson
