[project]
name = "datengartln"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.31.0",
    "ipython>=8.18.1",
    "matplotlib>=3.9.4",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pyyaml>=6.0.3",
]
